// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineVersionList calls Apis to list pipeline versions, sorted by creation time in descending order 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-706 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-721 MuiInputLabel-root-710 noMargin MuiInputLabel-formControl-715 MuiInputLabel-animated-718 MuiInputLabel-shrink-717 MuiInputLabel-outlined-720"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-741 MuiOutlinedInput-root-728 noLeftPadding MuiInputBase-formControl-742 MuiInputBase-adornedStart-745 MuiOutlinedInput-adornedStart-731"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-758 MuiOutlinedInput-notchedOutline-735 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-759"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-760 MuiInputAdornment-positionEnd-763"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-765"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-751 MuiOutlinedInput-input-736 MuiInputBase-inputAdornedStart-756 MuiOutlinedInput-inputAdornedStart-739"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-790 MuiIconButton-root-784 MuiPrivateSwitchBase-root-780 MuiCheckbox-root-774 MuiCheckbox-colorPrimary-778"
          >
            <span
              class="MuiIconButton-label-789"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-765"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-783"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-830"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-790 MuiTableSortLabel-root-801 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-765 MuiTableSortLabel-icon-803 MuiTableSortLabel-iconDirectionDesc-804"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-790 MuiTableSortLabel-root-801 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-765 MuiTableSortLabel-icon-803 MuiTableSortLabel-iconDirectionDesc-804"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-790 MuiTableSortLabel-root-801 MuiTableSortLabel-active-802 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-765 MuiTableSortLabel-icon-803 MuiTableSortLabel-iconDirectionDesc-804"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-790 MuiIconButton-root-784 MuiPrivateSwitchBase-root-780 MuiCheckbox-root-774 MuiCheckbox-colorPrimary-778"
              >
                <span
                  class="MuiIconButton-label-789"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-765"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-783"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-830"
                />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              <a
                class="link"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id0"
                title="test pipeline version name0"
              >
                test pipeline version name0
              </a>
            </div>
            <div
              class="cell"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-790 MuiIconButton-root-784 MuiPrivateSwitchBase-root-780 MuiCheckbox-root-774 MuiCheckbox-colorPrimary-778"
              >
                <span
                  class="MuiIconButton-label-789"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-765"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-783"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-830"
                />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              <a
                class="link"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id1"
                title="test pipeline version name1"
              >
                test pipeline version name1
              </a>
            </div>
            <div
              class="cell"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-706 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-741 MuiInput-root-813 MuiInputBase-formControl-742 MuiInput-formControl-814"
          >
            <div
              class="MuiSelect-root-806"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-807 MuiSelect-selectMenu-810 MuiInputBase-input-751 MuiInput-input-821"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-765 MuiSelect-icon-812"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-790 MuiButtonBase-disabled-791 MuiIconButton-root-784 MuiIconButton-disabled-788"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-789"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-765"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-790 MuiButtonBase-disabled-791 MuiIconButton-root-784 MuiIconButton-disabled-788"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-789"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-765"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineVersionList calls Apis to list pipeline versions, sorted by pipeline version name in descending order 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-847 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-862 MuiInputLabel-root-851 noMargin MuiInputLabel-formControl-856 MuiInputLabel-animated-859 MuiInputLabel-shrink-858 MuiInputLabel-outlined-861"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-882 MuiOutlinedInput-root-869 noLeftPadding MuiInputBase-formControl-883 MuiInputBase-adornedStart-886 MuiOutlinedInput-adornedStart-872"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-899 MuiOutlinedInput-notchedOutline-876 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-900"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-901 MuiInputAdornment-positionEnd-904"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-892 MuiOutlinedInput-input-877 MuiInputBase-inputAdornedStart-897 MuiOutlinedInput-inputAdornedStart-880"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-931 MuiIconButton-root-925 MuiPrivateSwitchBase-root-921 MuiCheckbox-root-915 MuiCheckbox-colorPrimary-919"
          >
            <span
              class="MuiIconButton-label-930"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-924"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-971"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 MuiTableSortLabel-active-943 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-931 MuiIconButton-root-925 MuiPrivateSwitchBase-root-921 MuiCheckbox-root-915 MuiCheckbox-colorPrimary-919"
              >
                <span
                  class="MuiIconButton-label-930"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-906"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-924"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-971"
                />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              <a
                class="link"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id0"
                title="test pipeline version name0"
              >
                test pipeline version name0
              </a>
            </div>
            <div
              class="cell"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-931 MuiIconButton-root-925 MuiPrivateSwitchBase-root-921 MuiCheckbox-root-915 MuiCheckbox-colorPrimary-919"
              >
                <span
                  class="MuiIconButton-label-930"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-906"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-924"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-971"
                />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              <a
                class="link"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id1"
                title="test pipeline version name1"
              >
                test pipeline version name1
              </a>
            </div>
            <div
              class="cell"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-931 MuiIconButton-root-925 MuiPrivateSwitchBase-root-921 MuiCheckbox-root-915 MuiCheckbox-colorPrimary-919"
              >
                <span
                  class="MuiIconButton-label-930"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-906"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-924"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-971"
                />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              <a
                class="link"
                href="/pipelines/details/pipeline/version/test-pipeline-version-id2"
                title="test pipeline version name2"
              >
                test pipeline version name2
              </a>
            </div>
            <div
              class="cell"
              style="width: 60%;"
            >
              <span
                class=""
                title=""
              >
                <span />
              </span>
            </div>
            <div
              class="cell"
              style="width: 20%;"
            >
              -
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-847 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-882 MuiInput-root-954 MuiInputBase-formControl-883 MuiInput-formControl-955"
          >
            <div
              class="MuiSelect-root-947"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-948 MuiSelect-selectMenu-951 MuiInputBase-input-892 MuiInput-input-962"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiSelect-icon-953"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-931 MuiButtonBase-disabled-932 MuiIconButton-root-925 MuiIconButton-disabled-929"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-930"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-906"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-931 MuiButtonBase-disabled-932 MuiIconButton-root-925 MuiIconButton-disabled-929"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-930"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-906"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineVersionList renders a list of one pipeline version 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-142 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-157 MuiInputLabel-root-146 noMargin MuiInputLabel-formControl-151 MuiInputLabel-animated-154 MuiInputLabel-shrink-153 MuiInputLabel-outlined-156"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-177 MuiOutlinedInput-root-164 noLeftPadding MuiInputBase-formControl-178 MuiInputBase-adornedStart-181 MuiOutlinedInput-adornedStart-167"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-194 MuiOutlinedInput-notchedOutline-171 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-195"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-196 MuiInputAdornment-positionEnd-199"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-201"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-187 MuiOutlinedInput-input-172 MuiInputBase-inputAdornedStart-192 MuiOutlinedInput-inputAdornedStart-175"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-226 MuiIconButton-root-220 MuiPrivateSwitchBase-root-216 MuiCheckbox-root-210 MuiCheckbox-colorPrimary-214"
          >
            <span
              class="MuiIconButton-label-225"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-201"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-219"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-266"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 MuiTableSortLabel-active-238 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-273 MuiCircularProgress-colorPrimary-276 MuiCircularProgress-indeterminate-275 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-278"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-279 MuiCircularProgress-circleIndeterminate-281"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-142 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-177 MuiInput-root-249 MuiInputBase-formControl-178 MuiInput-formControl-250"
          >
            <div
              class="MuiSelect-root-242"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-243 MuiSelect-selectMenu-246 MuiInputBase-input-187 MuiInput-input-257"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-201 MuiSelect-icon-248"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-226 MuiButtonBase-disabled-227 MuiIconButton-root-220 MuiIconButton-disabled-224"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-225"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-226 MuiIconButton-root-220"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-225"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-266"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineVersionList renders a list of one pipeline version with description 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-283 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-298 MuiInputLabel-root-287 noMargin MuiInputLabel-formControl-292 MuiInputLabel-animated-295 MuiInputLabel-shrink-294 MuiInputLabel-outlined-297"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-318 MuiOutlinedInput-root-305 noLeftPadding MuiInputBase-formControl-319 MuiInputBase-adornedStart-322 MuiOutlinedInput-adornedStart-308"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-335 MuiOutlinedInput-notchedOutline-312 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-336"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-337 MuiInputAdornment-positionEnd-340"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-342"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-328 MuiOutlinedInput-input-313 MuiInputBase-inputAdornedStart-333 MuiOutlinedInput-inputAdornedStart-316"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-367 MuiIconButton-root-361 MuiPrivateSwitchBase-root-357 MuiCheckbox-root-351 MuiCheckbox-colorPrimary-355"
          >
            <span
              class="MuiIconButton-label-366"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-342"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-360"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-407"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-367 MuiTableSortLabel-root-378 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342 MuiTableSortLabel-icon-380 MuiTableSortLabel-iconDirectionDesc-381"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-367 MuiTableSortLabel-root-378 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342 MuiTableSortLabel-icon-380 MuiTableSortLabel-iconDirectionDesc-381"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-367 MuiTableSortLabel-root-378 MuiTableSortLabel-active-379 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342 MuiTableSortLabel-icon-380 MuiTableSortLabel-iconDirectionDesc-381"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-414 MuiCircularProgress-colorPrimary-417 MuiCircularProgress-indeterminate-416 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-419"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-420 MuiCircularProgress-circleIndeterminate-422"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-283 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-318 MuiInput-root-390 MuiInputBase-formControl-319 MuiInput-formControl-391"
          >
            <div
              class="MuiSelect-root-383"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-384 MuiSelect-selectMenu-387 MuiInputBase-input-328 MuiInput-input-398"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-342 MuiSelect-icon-389"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-367 MuiButtonBase-disabled-368 MuiIconButton-root-361 MuiIconButton-disabled-365"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-366"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-367 MuiIconButton-root-361"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-366"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-342"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-407"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineVersionList renders a list of one pipeline version with error 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-565 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-580 MuiInputLabel-root-569 noMargin MuiInputLabel-formControl-574 MuiInputLabel-animated-577 MuiInputLabel-shrink-576 MuiInputLabel-outlined-579"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-600 MuiOutlinedInput-root-587 noLeftPadding MuiInputBase-formControl-601 MuiInputBase-adornedStart-604 MuiOutlinedInput-adornedStart-590"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-617 MuiOutlinedInput-notchedOutline-594 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-618"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-619 MuiInputAdornment-positionEnd-622"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-610 MuiOutlinedInput-input-595 MuiInputBase-inputAdornedStart-615 MuiOutlinedInput-inputAdornedStart-598"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-649 MuiIconButton-root-643 MuiPrivateSwitchBase-root-639 MuiCheckbox-root-633 MuiCheckbox-colorPrimary-637"
          >
            <span
              class="MuiIconButton-label-648"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-642"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-689"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 MuiTableSortLabel-active-661 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-696 MuiCircularProgress-colorPrimary-699 MuiCircularProgress-indeterminate-698 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-701"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-702 MuiCircularProgress-circleIndeterminate-704"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-565 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-600 MuiInput-root-672 MuiInputBase-formControl-601 MuiInput-formControl-673"
          >
            <div
              class="MuiSelect-root-665"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-666 MuiSelect-selectMenu-669 MuiInputBase-input-610 MuiInput-input-680"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiSelect-icon-671"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-649 MuiButtonBase-disabled-650 MuiIconButton-root-643 MuiIconButton-disabled-647"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-648"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-624"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-649 MuiIconButton-root-643"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-648"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-624"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-689"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineVersionList renders a list of one pipeline version without created date 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-424 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-439 MuiInputLabel-root-428 noMargin MuiInputLabel-formControl-433 MuiInputLabel-animated-436 MuiInputLabel-shrink-435 MuiInputLabel-outlined-438"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-459 MuiOutlinedInput-root-446 noLeftPadding MuiInputBase-formControl-460 MuiInputBase-adornedStart-463 MuiOutlinedInput-adornedStart-449"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-476 MuiOutlinedInput-notchedOutline-453 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-477"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-478 MuiInputAdornment-positionEnd-481"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-469 MuiOutlinedInput-input-454 MuiInputBase-inputAdornedStart-474 MuiOutlinedInput-inputAdornedStart-457"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-508 MuiIconButton-root-502 MuiPrivateSwitchBase-root-498 MuiCheckbox-root-492 MuiCheckbox-colorPrimary-496"
          >
            <span
              class="MuiIconButton-label-507"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-501"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-548"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 MuiTableSortLabel-active-520 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-555 MuiCircularProgress-colorPrimary-558 MuiCircularProgress-indeterminate-557 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-560"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-561 MuiCircularProgress-circleIndeterminate-563"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-424 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-459 MuiInput-root-531 MuiInputBase-formControl-460 MuiInput-formControl-532"
          >
            <div
              class="MuiSelect-root-524"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-525 MuiSelect-selectMenu-528 MuiInputBase-input-469 MuiInput-input-539"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiSelect-icon-530"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-508 MuiButtonBase-disabled-509 MuiIconButton-root-502 MuiIconButton-disabled-506"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-507"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-483"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-508 MuiIconButton-root-502"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-507"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-483"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-548"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineVersionList renders an empty list with empty state message 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-1 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-16 MuiInputLabel-root-5 noMargin MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12 MuiInputLabel-outlined-15"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-36 MuiOutlinedInput-root-23 noLeftPadding MuiInputBase-formControl-37 MuiInputBase-adornedStart-40 MuiOutlinedInput-adornedStart-26"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-53 MuiOutlinedInput-notchedOutline-30 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-54"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-55 MuiInputAdornment-positionEnd-58"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-46 MuiOutlinedInput-input-31 MuiInputBase-inputAdornedStart-51 MuiOutlinedInput-inputAdornedStart-34"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-85 MuiIconButton-root-79 MuiPrivateSwitchBase-root-75 MuiCheckbox-root-69 MuiCheckbox-colorPrimary-73"
          >
            <span
              class="MuiIconButton-label-84"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-78"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-125"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Version name"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Version name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 60%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 20%;"
          title="Uploaded on"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 MuiTableSortLabel-active-97 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Uploaded on
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-132 MuiCircularProgress-colorPrimary-135 MuiCircularProgress-indeterminate-134 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-137"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-138 MuiCircularProgress-circleIndeterminate-140"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-1 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-36 MuiInput-root-108 MuiInputBase-formControl-37 MuiInput-formControl-109"
          >
            <div
              class="MuiSelect-root-101"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-102 MuiSelect-selectMenu-105 MuiInputBase-input-46 MuiInput-input-116"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiSelect-icon-107"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiIconButton-root-79 MuiIconButton-disabled-83"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-84"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-85 MuiIconButton-root-79"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-84"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-125"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
